// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yl-card-highlight rendering renders correctly with custom props 1`] = `
<yl-card-highlight class="top" data-header-level="1" data-image="%7B%22src%22%3A%22https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FOIP.SMAmS1MxCpssY-raDGzy1wHaE7%3Fpid%3DImgDet%26rs%3D1%22%2C%22alt%22%3A%22imagen%20decorativa%22%7D" data-links="%5B%7B%22href%22%3A%22https%3A%2F%2Fapi.spotify.com%2Fv1%2Fartists%2F0OdUWJ0sBjDrqHygGUXeCF%22%2C%22label%22%3A%22Wilco%22%2C%22title%22%3A%22Wilco%22%7D%2C%7B%22href%22%3A%22https%3A%2F%2Fapi.spotify.com%2Fv1%2Fartists%2F7jy3rLJdDQY21OgRLCZ9sD%22%2C%22label%22%3A%22Tomas%22%2C%22title%22%3A%22Tomas%22%7D%5D" data-position="top">
  <mock:shadow-root>
    <div class="cover">
      <img alt="imagen decorativa" src="https://th.bing.com/th/id/OIP.SMAmS1MxCpssY-raDGzy1wHaE7?pid=ImgDet&amp;rs=1">
      <div>
        <span>
          imagen decorativa
        </span>
      </div>
    </div>
    <div class="text">
      <div>
        <h1 class="title" part="title">
          <slot name="title">
            Titulo
          </slot>
        </h1>
      </div>
      <p class="description" part="description">
        <slot name="description">
          Descripcion
        </slot>
      </p>
      <ul>
        <li class="link-item" part="link">
          <a href="https://api.spotify.com/v1/artists/0OdUWJ0sBjDrqHygGUXeCF" title="Wilco">
            Wilco
          </a>
        </li>
        <li class="link-item" part="link">
          <a href="https://api.spotify.com/v1/artists/7jy3rLJdDQY21OgRLCZ9sD" title="Tomas">
            Tomas
          </a>
        </li>
      </ul>
    </div>
  </mock:shadow-root>
</yl-card-highlight>
`;

exports[`yl-card-highlight rendering renders correctly with custom props and slot 1`] = `
<yl-card-highlight class="top" data-header-level="1" data-image="%7B%22src%22%3A%22https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FOIP.SMAmS1MxCpssY-raDGzy1wHaE7%3Fpid%3DImgDet%26rs%3D1%22%2C%22alt%22%3A%22imagen%20decorativa%22%7D" data-links="%5B%7B%22href%22%3A%22https%3A%2F%2Fapi.spotify.com%2Fv1%2Fartists%2F0OdUWJ0sBjDrqHygGUXeCF%22%2C%22label%22%3A%22Wilco%22%2C%22title%22%3A%22Wilco%22%7D%2C%7B%22href%22%3A%22https%3A%2F%2Fapi.spotify.com%2Fv1%2Fartists%2F7jy3rLJdDQY21OgRLCZ9sD%22%2C%22label%22%3A%22Tomas%22%2C%22title%22%3A%22Tomas%22%7D%5D" data-position="top">
  <mock:shadow-root>
    <div class="cover">
      <img alt="imagen decorativa" src="https://th.bing.com/th/id/OIP.SMAmS1MxCpssY-raDGzy1wHaE7?pid=ImgDet&amp;rs=1">
      <div>
        <span>
          imagen decorativa
        </span>
      </div>
    </div>
    <div class="text">
      <div>
        <h1 class="title" part="title">
          <slot name="title">
            Titulo
          </slot>
        </h1>
      </div>
      <p class="description" part="description">
        <slot name="description">
          Descripcion
        </slot>
      </p>
      <ul>
        <li class="link-item" part="link">
          <a href="https://api.spotify.com/v1/artists/0OdUWJ0sBjDrqHygGUXeCF" title="Wilco">
            Wilco
          </a>
        </li>
        <li class="link-item" part="link">
          <a href="https://api.spotify.com/v1/artists/7jy3rLJdDQY21OgRLCZ9sD" title="Tomas">
            Tomas
          </a>
        </li>
      </ul>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Header desde Slot
  </div>
  <div slot="description">
    Descripción desde Slot
  </div>
</yl-card-highlight>
`;

exports[`yl-card-highlight rendering renders correctly with default props 1`] = `
<yl-card-highlight class="top">
  <mock:shadow-root>
    <div class="cover">
      <img alt="Imagen no encontrada" src="https://via.placeholder.com/300x300.png?text=Imagen+no+encontrada">
      <div>
        <span>
          Imagen no encontrada
        </span>
      </div>
    </div>
    <div class="text">
      <div>
        <h2 class="title" part="title">
          <slot name="title">
            Titulo
          </slot>
        </h2>
      </div>
      <p class="description" part="description">
        <slot name="description">
          Descripcion
        </slot>
      </p>
      <ul></ul>
    </div>
  </mock:shadow-root>
</yl-card-highlight>
`;
